Geolocation, improved algorithm

--- a/src/frontend/www/index.html
+++ b/src/frontend/www/index.html
@@ -63,6 +63,7 @@
     <script src="js/controllers-directive-detectGestures.js"></script>
     <script src="js/services.js"></script>
     <script src="js/services-topos.js"></script>
+    <script src="js/services-geoposition.js"></script>
     <script src="js/services-userservice.js"></script>      
     <script src="js/services-auth.js"></script>
       
