New API Delete Boulder + Mayor change in Boulder Visualization at the Front End

--- a/src/frontend/www/index.html
+++ b/src/frontend/www/index.html
@@ -13,7 +13,7 @@
     <link href='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css' rel='stylesheet' />
 -->
     <script src='lib/mapbox.js-bower-2.4.0/mapbox.js'></script>
-    <link href='lib/mapbox.js-bower-2.4.0//mapbox.css' rel='stylesheet' />
+    <link href='lib/mapbox.js-bower-2.4.0/mapbox.css' rel='stylesheet' />
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
